# altmur-backend

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 6562e9fe4ed3_initial_tables.py
docs/: DB.erd
src/: main.py  models.py
src/auth/: models.py  repository.py
src/chat/: models.py
src/core/: database.py  repository.py  settings.py
src/moderation/: models.py
src/rooms/: models.py
tests/: test_auth_repository.py  test_auth_repository_extra.py
tests/auth/: test_repository.py
tests/integration/: test_user_repository_integration.py
tests/unit/: test_user_repository_unit.py
