[project]
name = "murmur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.14",
    "pydantic-settings>=2.10.1",
    "pydantic[settings]>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.35.0",
]
